--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Ramen Rater</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <script defer type="module" src="./src/index.js"></script>
+  <script defer src="./src/index.js"></script>
 </head>
 
 <body>
@@ -15,11 +15,12 @@
 
   
   <div id="ramen-menu">
-  
+    
   </div>
 
-
+ <!-- CSS SELECTOR: "#ramen-detail" -->
   <div id="ramen-detail">
+    <!-- CSS SELECTOR: "#ramen-detail > .detail-image" -->
     <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
     <h2 class="name">Insert Name Here</h2>
     <h3 class="restaurant">Insert Restaurant Here</h3>
